--- a/env.conf.example
+++ b/env.conf.example
@@ -1,8 +1,14 @@
 ### JAVA ################################################
 java_install_from=local
 java_dir=~/services/jdks
-java_jdk_local_dist=~/tmp/jdks/jdk-13.0.2_linux-x64_bin.tar.gz
-java_jdk_remote_url=https://download.oracle.com/otn-pub/java/jdk/13.0.2+8/d4173c853231432d94f001e99d882ca7/jdk-13.0.2_linux-x64_bin.tar.gz
+
+### JAVA install form local ################################################
+# java_local_jdk_path must be tar.gz
+java_local_jdk_path=~/tmp/jdks/jdk-13.0.2_linux-x64_bin.tar.gz
+
+### JAVA install form remote ################################################
+java_remote_jdk_url=https://download.oracle.com/otn-pub/java/jdk/13.0.2+8/d4173c853231432d94f001e99d882ca7/jdk-13.0.2_linux-x64_bin.tar.gz
+
 
 ### MYSQL #################################################
 mysql_version=8.0
@@ -11,6 +17,10 @@ mysql_user=default
 mysql_password=secret
 mysql_port=3306
 mysql_root_password=root
+mysql_confluence_user=confluenceuser
+mysql_confluence_password=secret
+
+
 
 ### confluence #################################################
 confluence_install_from=remote
@@ -18,7 +28,7 @@ confluence_dir=~/services/confluence
 
 ### confluence install form remote #############################
 confluence_remote_download_url=https://product-downloads.atlassian.com/software/confluence/downloads/atlassian-confluence-7.2.1-x64.bin
-confluence_remote_saved_dir=/tmp/
+confluence_remote_save_dir=~/tmp/
 
 ### confluence install form local #############################
 
